2009-02-28  Russ Allbery  <rra@stanford.edu>

	* ANSIColor.pm: Fix additional spelling errors and rewrap the POD
	documentation to a 74-character margin.

	* t/basic.t: Rewrite to use Test::More.
	* t/pod.t: Likewise.

	* ANSIColor.pm (AUTOLOAD): If ANSI_COLORS_DISABLED is set, return
	the stringified arguments rather than creating a sub.  This allows
	colors to work later if ANSI_COLORS_DISABLED is unset rather than
	making its effects permanent.  It also avoids adding a reset
	escape sequence when $AUTORESET and ANSI_COLORS_DISABLED are both
	set.

2008-09-14  Russ Allbery  <rra@stanford.edu>

	* ANSIColor.pm: Add faint as a synonym for dark and improve the
	documentation of text attributes.

	* t/pod-spelling.t: New check to spell-check POD documentation
	using ispell with Pod::Spell.
	* ANSIColor.pm: Fix spelling and markup errors in documentation
	and add stop-words where appropriate.

2007-04-22  Russ Allbery  <rra@stanford.edu>

	* ANSIColor.pm: Version 1.12 released.

2007-03-23  Russ Allbery  <rra@stanford.edu>

	* ANSIColor.pm: Use the right syntax for internal POD links.
	Thanks, Rafael Garcia-Suarez.

2007-02-10  Russ Allbery  <rra@stanford.edu>

	* ANSIColor.pm: Add cyan and white to the list of supported
	attributes.  Not sure how I managed to omit them before.

2006-07-12  Russ Allbery  <rra@stanford.edu>

	* ANSIColor.pm: Version 1.11 released.

2006-06-22  Russ Allbery  <rra@stanford.edu>

	* ANSIColor.pm: Clarify in the documentation the behavior of
	terminals when background colors are set across newlines, and
	rewrite some of the examples to avoid doing things that confuse
	the terminal.  Fix a couple of spelling errors.

	* test.pl: Moved to...
	* t/basic.t: ...here.
	* t/pod.t: New test for POD validity.

2005-08-21  Russ Allbery  <rra@stanford.edu>

	* ANSIColor.pm: Version 1.10 released.

	* ANSIColor.pm (colored): Fix the $EACHLINE support to work
	properly with a line consisting solely of "0".  Remove Zenin's