@@ -1,35 +1,53 @@
 #!/usr/bin/perl
 #
 # t/pod-spelling.t -- Test POD spelling.
+#
+# Checks all POD files in the tree for spelling problems using Pod::Spell and
+# either aspell or ispell.  aspell is preferred.  This test is disabled unless
+# RRA_MAINTAINER_TESTS is set, since spelling dictionaries vary too much
+# between environments.
+#
+# Copyright 2008, 2009 Russ Allbery <rra@stanford.edu>
+#
+# This program is free software; you may redistribute it and/or modify it
+# under the same terms as Perl itself.
 
-# Called to skip all tests with a reason.
-sub skip_all {
-    print "1..1\n";
-    print "ok 1 # skip - @_\n";
-    exit;
-}
+use strict;
+use Test::More;
 
-# Make sure we have prerequisites.  hunspell is currently not supported due to
-# lack of support for contractions.
+# Skip all spelling tests unless the maintainer environment variable is set.
+plan skip_all => 'Spelling tests only run for maintainer'
+    unless $ENV{RRA_MAINTAINER_TESTS};
+
+# Load required Perl modules.
 eval 'use Test::Pod 1.00';
-skip_all "Test::Pod 1.00 required for testing POD" if $@;
+plan skip_all => 'Test::Pod 1.00 required for testing POD' if $@;
 eval 'use Pod::Spell';
-skip_all "Pod::Spell required to test POD spelling" if $@;
-my @spell;
-for my $dir (split ':', $ENV{PATH}) {
-    if (-x "$dir/ispell") {
-        @spell = ("$dir/ispell", '-d', 'american', '-l', '-p', '/dev/null');
-    }
-    last if @spell;
-}
-skip_all "ispell required to test POD spelling" unless @spell;
+plan skip_all => 'Pod::Spell required to test POD spelling' if $@;
 
-# Run the test, one for each POD file.
+# Locate a spell-checker.  hunspell is not currently supported due to its lack
+# of support for contractions (at least in the version in Debian).
+my @spell;
+my %options = (aspell => [ qw(-d en_US --home-dir=./ list) ],
+               ispell => [ qw(-d american -l -p /dev/null) ]);
+SEARCH: for my $program (qw/aspell ispell/) {
+    for my $dir (split ':', $ENV{PATH}) {
+        if (-x "$dir/$program") {
+            @spell = ("$dir/$program", @{ $options{$program} });
+        }
+        last SEARCH if @spell;
+    }
+}
+plan skip_all => 'aspell or ispell required to test POD spelling'
+    unless @spell;
+
+# Prerequisites are satisfied, so we're going to do some testing.  Figure out
+# what POD files we have and from that develop our plan.
 $| = 1;
 my @pod = all_pod_files ();
-my $count = scalar @pod;
-print "1..$count\n";
-my $n = 1;
+plan tests => scalar @pod;
+
+# Finally, do the checks.
 for my $pod (@pod) {
     my $child = open (CHILD, '-|');
     if (not defined $child) {
@@ -45,19 +63,13 @@ for my $pod (@pod) {
     } else {
         my @words = <CHILD>;
         close CHILD;
-        if ($? != 0) {
-            print "ok $n # skip - @spell failed\n";
-        } elsif (@words) {
+      SKIP: {
+            skip "@spell failed for $pod", 1 unless $? == 0;
             for (@words) {
                 s/^\s+//;
                 s/\s+$//;
             }
-            print "not ok $n\n";
-            print " - Misspelled words found in $pod\n";
-            print "   @words\n";
-        } else {
-            print "ok $n\n";
+            is ("@words", '', $pod);
         }
-        $n++;
     }
 }
